add_library(flowlessly_solvers cycle_cancelling.cc successive_shortest.cc)

target_link_libraries(flowlessly_solvers boost_thread boost_system flowlessly_misc flowlessly_graphs)

# Build tests
add_executable(cycle_cancelling_tests cycle_cancelling_tests.cc)
target_link_libraries(cycle_cancelling_tests glog gflags ${gtest_LIBRARY} ${gtest_MAIN_LIBRARY} pthread flowlessly_misc flowlessly_graphs flowlessly_solvers)
add_test(cycle_cancelling_tests ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/cycle_cancelling_tests)

add_executable(successive_shortest_tests successive_shortest_tests.cc)
target_link_libraries(successive_shortest_tests glog gflags ${gtest_LIBRARY} ${gtest_MAIN_LIBRARY} pthread flowlessly_misc flowlessly_graphs flowlessly_solvers)
add_test(successive_shortest_tests ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/successive_shortest_tests)
